policies/kyverno/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: require-image-tag-not-latest
      match:
        any:
          - resources:
              kinds:
                - Pod
                - Deployment
      validate:
        message: "Using the 'latest' image tag is not allowed."
        pattern:
          spec:
            =(template):
              spec:
                containers:
                  - image: "!*:latest"
